Fix decryption failure bar covering the timeline (#10360)
* Use grid layout instead

- BEM naming style
- Increase block gap from 4px to 8px
- Use flexbox inside 'header' grid-area to let the buttons wrapped
- Use variables
- Remove 4px gap when one of the buttons is not rendered
- Change 'body' to 'message'
- Set 'align-self: start' to the icon and spinner


* Unset height of spinner


* Break lines at newline characters with white-space: pre-line


* Edit tests to check decryption failure bars on narrow timeline

- checkTimelineNarrow() looks for buttons by default
- Test indicator as well


* Remove a line


* Edit the test to have it check mx_EventTile_last only inside mx_RoomView_body


* Fix double underscores


* Fix double underscores - pcss


* Iterate - buttons at the bottom

- Set common spacing to buttons with variables
- Remove line breaks, yarn run i18n
- Set data-testid for headlines and buttons in case the tested strings would be displayed elsewhere simultaneously


* Check waiting headline as well


* Increase spacing between the message and the buttons


* lint


* Increase block gap between wrapped buttons for clickability

Apply 8px between wrapped buttons


* Revert bottom margin of buttons which are not expected to be wrapped


* Check visibility instead of existence

This commit removes data-testid from headlines and data-testid-button and checks whether the elements are really visible, not overflowing the viewport.


* Remove redundant gap between 'mx_DecryptionFailureBar_start' and the bottom edge

This commit adds '.mx_DecryptionFailureBar--withEnd' class name to have it applied to the bar only if it has button(s). This way the bar is rendered with a flexbox and the row-gap declaration is respected only if there is a 'mx_DecryptionFailureBar--withEnd' element. The element  currently includes the button(s) only.


* lint - prettier


* Have Percy take a snapshot of the b

--- a/res/css/_common.pcss
+++ b/res/css/_common.pcss
@@ -43,6 +43,8 @@ $timeline-image-border-radius: 8px;
     --transition-short: 0.1s;
     --transition-standard: 0.3s;
     --MessageTimestamp-width: $MessageTimestamp_width;
+    --buttons-dialog-gap-row: $spacing-8;
+    --buttons-dialog-gap-column: $spacing-8;
 }
 
 @media only percy {
@@ -525,8 +527,8 @@ legend {
     margin-inline-start: auto;
 
     /* default gap among elements */
-    column-gap: $spacing-8; /* See margin-right below inside the button style */
-    row-gap: 5px; /* See margin-bottom below inside the button style */
+    column-gap: var(--buttons-dialog-gap-column);
+    row-gap: var(--buttons-dialog-gap-row);
 
     button {
         margin: 0 !important; /* override the margin settings */
@@ -548,7 +550,7 @@ legend {
 .mx_Dialog_buttons input[type="submit"] {
     @mixin mx_DialogButton;
     margin-left: 0px;
-    margin-right: 8px;
+    margin-right: var(--buttons-dialog-gap-column);
     margin-bottom: 5px;
 
     /* flip colours for the secondary ones */
